# pred-fab-mock

./: .gitignore  .pfab_session.json  HANDOFF.md  OVERNIGHT_REPORT.md  PROJECT_CONTEXT.md  README.md  UML_diagram.puml  __init__.py  agent_setup.py  analysis.py  cli.py  cli_helpers.py  main.py  pyproject.toml  pyrightconfig.json  reporting.py  run_test.sh  schema.py  showcase.py  topology_viz.py  utils.py  workflow.py
cli/: __init__.py  agent_setup.py  commands.py  doe.py  main.py  plots.py  session.py
dev/: 01_physics.py  02_baseline.py  03_prediction.py  04_uncertainty.py  05_exploration.py  05b_optimizer_tuning.py  06_trajectory.py  07_inference.py  DEV_CONTEXT.md  _smoke_gradient.py  _smoke_layer3.py  eval_exploration.py  shared.py  smoke_dataset_code.py  topology_viz.py
dev/concept/: _style.py  concept_01_kernels.py  concept_02_raw_density.py  concept_03_actual_evidence.py  concept_04_sampling_space.py  concept_05_integrated_objective.py  concept_06_acquisition_landscape.py  concept_07_packing_3d.py  (+5 more)
fabrication/: __init__.py  physics.py  system.py
implementations/: __init__.py  calibration.py  external_data.py  prediction.py
models/: MODELS_CONTEXT.md  __init__.py  evaluation_models.py  feature_models.py  prediction_model.py  schema.py
scripts/: smoke.py
sensors/: SENSORS_CONTEXT.md  __init__.py  _segment_sensor.py  camera.py  energy.py  fabrication.py  physics.py
steps/: STEPS_CONTEXT.md  _common.py  adapt.py  analyse.py  baseline.py  configure.py  explore.py  explore_trajectory.py  grid.py  inference.py  init_agent.py  init_physics.py  init_schema.py  report.py  reset.py  summary.py  test_set.py
utils/: __init__.py  mock_data.py  visualize.py
visualization/: VISUALIZATION_CONTEXT.md  __init__.py  _style.py  console.py  exploration.py  helpers.py  inference.py  journey.py  physics.py  plots.py  prediction.py  process.py  trajectory.py
(+18 files in other folders)
